[BUGFIX] Adjusted table width to avoid overlapping grids

--- a/Resources/Public/Backend/Css/Skin/t3skin_override.css
+++ b/Resources/Public/Backend/Css/Skin/t3skin_override.css
@@ -24,6 +24,11 @@
 
 .t3-page-columns {
 	border-spacing: 10px !important;
+	width: auto;
+}
+
+.t3-page-columns .t3-page-columns {
+	min-width: 100%;
 }
 
 .t3-page-ce:hover .t3-page-ce-header {
